--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,38 @@ body {
 	font-size: 12px;
   }
   
+  .holberton_school-icon-arrow_3,
+.holberton_school-icon-arrow_4 {
+  font-size: 5rem;
+}
+
+.holberton_school-icon-check {
+  font-size: 30px;
+  color: #82d24f;
+}
+
+.arrow-black {
+  color: #000000;
+}
+
+.video-card {
+	width: 255px;
+	height: 335px;
+  }
+  
+  .play-img {
+	margin: -110px 0 40px 85px;
+  }
+  
+  [class^='holberton_school-icon-ic'] {
+	color: #ffffff;
+	font-size: 30px;
+  }
+  
+  .opacity-50 {
+	opacity: 0.5;
+  }
+  
+  .opacity-35 {
+	opacity: 0.35;
+  }
