--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,11 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
   }
-
+  
+  .pricing-header {
+	background-image: url(images/pic_2.jpg);
+  }
+  
   .text-responsive {
 	font-size: 10vw;
   }
@@ -66,20 +70,20 @@ body {
   }
   
   .holberton_school-icon-arrow_3,
-.holberton_school-icon-arrow_4 {
-  font-size: 5rem;
-}
-
-.holberton_school-icon-check {
-  font-size: 30px;
-  color: #82d24f;
-}
-
-.arrow-black {
-  color: #000000;
-}
-
-.video-card {
+  .holberton_school-icon-arrow_4 {
+	font-size: 5rem;
+  }
+  
+  .holberton_school-icon-check {
+	font-size: 30px;
+	color: #82d24f;
+  }
+  
+  .arrow-black {
+	color: #000000;
+  }
+  
+  .video-card {
 	width: 255px;
 	height: 335px;
   }
@@ -100,6 +104,7 @@ body {
   .opacity-35 {
 	opacity: 0.35;
   }
+  
   .underline:after {
 	content: '';
 	display: block;
@@ -128,4 +133,25 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	padding: 0.5rem;
+  }
+  
+  .search-form {
+	height: 50px;
+  }
+  
+  .search-form:focus {
+	background-color: #d195ff;
+  }
+  
+  .search-form::placeholder {
+	color: #ffffff;
+	opacity: 0.5;
+  }
+  
+  .icon-bg {
+	background-color: #d195ff;
+	font-size: 28px;
+	padding-top: 10px;
+	padding-left: 10px;
+	border-top-style: rounded;
   }
